--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Start header -->
     <div class="header">
         <div class="container">
-            <img class="Logo" src="imgs/Logo.png" alt="Logo">
+            <img class="Logo" src="Imgs/Logo.png" alt="Logo">
             <div class="Links">
                 <span class="Bar-Icon">
                     <span></span>
@@ -133,7 +133,7 @@
                 <!-- End Service -->
                 <div class="col">
                     <div class="image">
-                        <img src="imgs/Desert.jpg" alt="Desert">
+                        <img src="Imgs/Desert.jpg" alt="Desert">
                     </div>
                 </div>
             </div>
@@ -147,21 +147,21 @@
             <p>If You Do It Right, It Will Last Forever.</p>
             <div class="Portfolio-content">
                 <div class="card">
-                    <img src="imgs/portfolio 2 ‫‬.jpg" alt="portfolio 1">
+                    <img src="Imgs/portfolio 2 ‫‬.jpg" alt="portfolio 1">
                     <div class="info">
                         <h3>Project here</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum maiores quibusdam ea </p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="imgs/portfolio 2 ‫‬.jpg" alt="portfolio 2">
+                    <img src="Imgs/portfolio 2 ‫‬.jpg" alt="portfolio 2">
                     <div class="info">
                         <h3>Project here</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum maiores quibusdam ea </p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="imgs/portfolio 2 ‫‬.jpg" alt="portfolio 3">
+                    <img src="Imgs/portfolio 2 ‫‬.jpg" alt="portfolio 3">
                     <div class="info">
                         <h3>Project here</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum maiores quibusdam ea </p>
@@ -178,7 +178,7 @@
             <p>Less Is More Work.</p>
             <div class="about-content">
                 <div class="image">
-                    <img src="imgs/portfolio 2.jpg" alt="About">
+                    <img src="Imgs/portfolio 2.jpg" alt="About">
                 </div>
                 <div class="text">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni unde veniam doloribus inventore
